# interna-clinic

./: docker-compose.yml
interna-clinic-backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
interna-clinic-backend/alembic/versions/: 84065f3d33e7_.py  d23150fab74e_.py  eecd1a60e2d5_.py
interna-clinic-backend/app/: main.py
interna-clinic-backend/app/api/v1/repositories/: patient_repository.py
interna-clinic-backend/app/api/v1/routers/: patient_router.py
interna-clinic-backend/app/api/v1/services/: patient_service.py
interna-clinic-backend/app/models/: models.py
interna-clinic-backend/app/schemas/: schemas.py
interna-clinic-frontend/: Dockerfile  README.old.md  package-lock.json  package.json
interna-clinic-frontend/.nginx/: Dockerfile  nginx.conf
interna-clinic-frontend/public/: index.html
interna-clinic-frontend/src/auth/: authProvider.js
interna-clinic-frontend/src/components/adminComponents/addAdminMenu/: addAdminMenu.css  addAdminMenu.css.map  addAdminMenu.js  addAdminMenu.scss
interna-clinic-frontend/src/components/adminComponents/adminAddDoctorMenu/: adminAddDoctorMenu.css  adminAddDoctorMenu.css.map  adminAddDoctorMenu.js  adminAddDoctorMenu.scss
interna-clinic-frontend/src/components/app/: App.js  app.css  app.css.map  app.scss
interna-clinic-frontend/src/components/login/: loginPage.css  loginPage.css.map  loginPage.js  loginPage.scss
interna-clinic-frontend/src/components/pagination/: pagination.css  pagination.css.map  pagination.js  pagination.scss
interna-clinic-frontend/src/providers/: pageProvider.js
(+70 files in other folders)
